--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
     <div id="lead">
         <div id="lead-content">
-            <h1>Ryan Fitzgerald</h1>
+            <h1>Antonio Munene Maina</h1>
             <h2>Software Engineer</h2>
             <a href="#" class="btn-rounded-white">Download Resume</a>
         </div>
@@ -73,9 +73,13 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat. Donec
-                        eu vehicula neque. Donec viverra lorem nunc, tempus euismod eros sollicitudin ut. Quisque et tincidunt libero. Donec id pharetra justo. Proin euismod lacinia dolor, eu scelerisque justo tempus pharetra. Vivamus nunc justo, finibus
-                        ut nisl sed, euismod rhoncus nulla. Proin sed magna egestas, egestas ante et, congue eros. In consequat, mauris dapibus tincidunt suscipit, ex libero aliquet diam, at maximus risus enim non leo.
+                        I am a person who is positive about very many aspects of life. A lot of things that I have learnt in life is from people whom I 
+                        have inturacted with. I have learned to be greatful and humble at all times. I am hardworking, persistent, understanding and persistent
+                        , however I know having a chance at anything is a chance to improvment. 
+                        I like a little bit of politics, music, domesticated animals and working with people. I push myself towords perfection through learning
+                        as much as I can. Meditating and analization is what I do mostly when I am by myself. I like exercising and exploring through traveling
+                        to new places and seeing new things.
+                        I am very passionate about what I do and I take my work very seriously.
                     </p>
                 </div>
             </div>
@@ -86,27 +90,32 @@
     <div id="experience" class="background-alt">
         <h2 class="heading">Experience</h2>
         <div id="experience-timeline">
-            <div data-date="September 2015 – September 2016">
-                <h3>Employer Name</h3>
-                <h4>Job Title</h4>
+
+            <div data-date="September 2016 – September 2017">
+                <h3>Appco Company</h3>
+                <h4>Marketing Agent</h4>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                    I worked for Appco company were I worked as a sells agent. I sold utensils, flash lights, solar mini panels etc. I started of at 
+                    Kakamega town but later was transferred to some of the new branches which had just stared like Malaba and later to the Uganda branch 
+                    where I worked for four months.
                 </p>
             </div>
 
-            <div data-date="September 2015 – September 2016">
-                <h3>Employer Name</h3>
-                <h4>Job Title</h4>
+            <div data-date="September 2017 – September 2018">
+                <h3>Sanlam Insurance</h3>
+                <h4>Financial Consoltant</h4>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                    I worked at Sanlam Kakamega branch as a Financial Consoltant. My job was to sell company policies like Investment policies, education
+                    policies and last respect policies. I was also the first contact to the clients to offer Financial Consoltancy if need be.
                 </p>
             </div>
 
-            <div data-date="September 2015 – September 2016">
-                <h3>Employer Name</h3>
-                <h4>Job Title</h4>
+            <div data-date="September 2018 – September 2019">
+                <h3>Phillis Kiptoo</h3>
+                <h4>Caretaker</h4>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                    I moved to Nakuru town and worked for Phillis as a caretaker in partnership with Greenhomes agencies which managed a big part of
+                    her properties. My job was to make sure that any issue conserning the property that I managed was catered for. 
                 </p>
             </div>
         </div>
@@ -116,28 +125,29 @@
     <div id="education">
         <h2 class="heading">Education</h2>
         <div class="education-block">
-            <h3>University of Ottawa</h3>
-            <span class="education-date">Sept 2016 - Sept 2017</span>
-            <h4>Bachelor of Science in Computer Science</h4>
+            <h3>Kiambu Institute Of Science And Technology </h3>
+            <span class="education-date">Sept 2013 - Sept 2014</span>
+            <h4>Diploma in Quantity Survey</h4>
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                I did my first year at Kiambu Institute Of Science And Technology in Quantity Survey. The course was to take three years but I only
+                managed to pay for one year.
             </p>
         </div>
         <!-- End .education-block -->
 
         <div class="education-block">
-            <h3>University of Ottawa</h3>
-            <span class="education-date">Sept 2016 - Sept 2017</span>
-            <h4>Bachelor of Science in Computer Science</h4>
+            <h3>Moringa School</h3>
+            <span class="education-date">January 2020 - July 2020</span>
+            <h4>Software Development</h4>
             <ul>
                 <li>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    In the first module I learnt HTML, CSS, Bootstarp and JavaScript.
                 </li>
                 <li>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    In the second module I learnt AngularJs, Java/Spark and Java/Android.
                 </li>
                 <li>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Finally I qualified to the final stage to do my Pro-Dev.
                 </li>
             </ul>
         </div>
@@ -155,11 +165,11 @@
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3>Project Name Here</h3>
+                        <h3>Heroes</h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                            A website for your favourite hero. Where you can get to add a hero of your choise and select a team for Him/Her and also assign a task for them to do.
                         </p>
-                        <a href="#">View Project</a>
+                        <a href="#">https://heroes047.herokuapp.com/</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -171,11 +181,13 @@
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3>Project Name Here</h3>
+                        <h3>Caesar</h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                            Also known as Caesar's cipher, the shift cipher, Caesar's code or Caesar shift, is one of the simplest and most widely known 
+                            encryption techniques. It is a type of substitution cipher in which each letter in the plaintext is replaced by a letter some 
+                            fixed number of positions down the alphabet.
                         </p>
-                        <a href="#">View Project</a>
+                        <a href="#">https://github.com/Antonioisrooted/Caesar</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -189,31 +201,12 @@
         <h2 class="heading">Skills</h2>
         <ul>
             <li>JavaScript</li>
-            <li>Python</li>
-            <li>Ruby</li>
-            <li>Go</li>
-            <li>Node.js</li>
             <li>AngularJs</li>
-            <li>React</li>
-            <li>Elixir</li>
             <li>Java</li>
-            <li>C</li>
-            <li>C#</li>
-            <li>C++</li>
-            <li>Ruby on Rails</li>
             <li>JavaScript</li>
-            <li>Python</li>
-            <li>Ruby</li>
-            <li>Go</li>
-            <li>Node.js</li>
             <li>AngularJs</li>
-            <li>React</li>
-            <li>Elixir</li>
-            <li>Java</li>
-            <li>C</li>
-            <li>C#</li>
-            <li>C++</li>
-            <li>Ruby on Rails</li>
+            <li>Spark</li>
+            <li>Android</li>
         </ul>
     </div>
     <!-- End #skills -->
@@ -221,7 +214,7 @@
     <div id="contact">
         <h2>Get in Touch</h2>
         <div id="contact-form">
-            <form method="POST" action="https://formspree.io/email@email.com">
+            <form method="POST" action="https://antoniommaina@yahoo.com">
                 <input type="hidden" name="_subject" value="Contact request from personal website" />
                 <input type="email" name="_replyto" placeholder="Your email" required>
                 <textarea name="message" placeholder="Your message" required></textarea>
